--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node D:/КопияФулстэк/JS/trySiteRent/todo-server/index.js"
+    "start": "node ./todo-server/index.js"
   },
   "author": "",
   "license": "ISC",
