--- a/todo-server/.github/workflows/deploy.yml
+++ b/todo-server/.github/workflows/deploy.yml
@@ -14,5 +14,8 @@ jobs:
       - run: mkdir "$HOME/.ssh"
       - run: echo "${{ secrets.key0 }}" > "$HOME/.ssh/key0"      
       - run: chmod 600 "$HOME/.ssh/key0"
-      - run: npm start
+      - run: npm run start
+      - run: rsync -e "ssh -p 20022 -i $HOME/.ssh/key0 -o StrictHostKeyChecking=on" --archive --commpress --delete . timeweb.cloud/my/var/www/altay-sutki/public_html
+
+      #/home/u/user/имя_сайта/public_html/
 
